Changes in version 2.9-0

  o R Commander script tab now tolerates blank lines in muiltiline commands (contribution of Yoshinobu Kanda).
  
  o Small changes.
  
Changes in version 2.8-1

  o Addition to translation (R-Rcmdr.pot) file.
  
  o Corrected omision of Manuel Munoz Marquez as new package coauthor.
  
  o Now require rgl version 0.110.2 to fix problem with earlier version.

Changes in version 2.8-0

  o Small improvements to 3D scatterplot and recode dialogs.
  
  o User name inferred and used in startup message and documents.
  
  o New dialogs for 3D component+residual and added-variable plots.
  
  o Use text help for non-Windows system with R 4.2.0 (due to bug in R).
  
  o Statistical modeling dialogs gain an optional case-deletion text box.
  
  o New minimum.width and minimum.height Rcmdr options, defaulting to 1000 and 400, respectively.
  
  o Commands now can create sections (by default at level 3) and a table of contents in the R Markdown document produced by the R Commander (suggestion of Bob Muenchen).
  
  o RGL in RMarkdown now works with pdf, rtf, and word file formats as well as html, still requires Pandoc (suggestion of Georges Monette).
  
  o Boxplot dialog now permits selection of more than one variable for parallel boxplots (suggestion of Ivan Krylov).
  
  o Small improvements.
  
  o Updated translations (with thanks to): Chinese (Tsung-wu Ho),Japanese (Takaharu Araki), Korean (Jong-Hwa Shin), Romanian (Adrian Dusa), Russian (Alexey Shipunov), Slovenian (Matjaz Jeran), Spanish (Manuel Munoz Marquez).

Changes in version 2.7-1

  o Updated Polish translation, thanks to Lukasz Daniel.
  
  o Fixed mixed-up .mo files for Spanish and Brazilian-Portuguese translations (problem reported by Jose Henrique Hildebrand Grisi Filho).
  
  o Small bug fixes to and improvements to repeated-measures dialogs.

Changes in version 2.7-0

  o New dialogs for repeated-measures ANOVA and ANCOVA and plots with one or two repeated-measures factors.
  