@@ -533,6 +533,8 @@ commanderPosition()
 
   \emph{Executing and logging commands: }
   
+  For conveniently constructing character strings representing commands, see \code{\link{Command}}.
+  
   The functions \code{doItAndPrint}, \code{justDoIt}, and \code{logger} control the 
   execution, logging, and printing of commands generated by menus and dialogs. 
   \code{logger(command)} adds \code{command} to the log/script window and to the output window. 
@@ -666,6 +668,8 @@ commanderPosition()
   The \code{tkfocus} function is exported for historical reasons.
   
 }
+
+\seealso{\code{\link{Command}}.}
 
 \references{
     T. Lumley (2001) Programmer's niche: Macros in R.
